﻿A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Since build 220:
----------------
* IDispatch failures will try and get error information via IErrorInfo (Stefan
  Schukat via patch #130)

* A null SPropTagArray will now return None instead of crashing.

* New mapi/exchange interfaces PyIExchangeManageStoreEx, PyIMAPIAdviseSink,
 PyIMsgStore::Advise, PyIMsgStore::Unadvise, HrAllocAdviseSink,
 HrThisThreadAdviseSink, and HrDispatchNotifications (Nick Czeczulin)

Since build 219:
----------------
* win32com - sys.argv[0] may be set to a bytes object instead of a string on
  Python 3 when implementing an in-process COM object.

* Fix that allows a property to be fetched on COM objects to work in more cases
  (Fredrik Orderud via patch #155)

* Disabled exchange and exchdapi modules on Python 2.5 due to unresolved
  build issues.

* Fix potential crash in SHGetIDListFromObject and SHGetFileInfo issues (rupole)

* Allow GetShortPathName to handle long paths in unicode mode (ruple)

* Fix intermittent crash in win32cred.CredRead() (bug #670, rupole)

* Support PT_MV_BINARY MAPI properties, (patch #37) and many other MAPI
  improvements (Nick Czeczulin)

* Fix username used with EvtOpenSession (bug #688, rupole)

* Fix OutputDebugString encoding in wide builds (patch #142, rupole)

Since build 218:
----------------
 * win32com.mapi
   Addded outlook interface IConverterSession with methods MIMEToMAPI, MAPIToMIMEStm, and SetAdrBook
   Added method OpenStreamOnFile (Nick Czeczulin)
   Ignore PT_MV_TSTRING along with PT_TSTRING (Nick Czeczulin) 
   Bugfix to support PT_MV_BINARY properties (Nick Czeczulin via patch #37) 

 * Conversions from a Python object to a variant now does a better job at
   deciding what variant type to use, taking into account the size and sign of